Notes
input= information put in 
output= information put out 


Print

print("Hello World")

print("Hello", end='')
print("World")
#prints Hello World as one line

print("Hi ", end='Rose')
print(", how are you?")
#prints: Hi Rose, how are you?, separated as /Hi /Rose/, how are you?

.py should be the file type for python 
python is an interpreted language

python shells can be used to run/ test your code

#This is a one-line comment

'''
This is a multiple line comment
The marks are single quotes
'''

Variables
variables can be named with letters and _, are case sensitive 

my_variable = "Hello World"
print(my_variable)

python does not use the var keyword

string_variable = "letters and symbols"
#strings always have quotes

boolean_variable = True
print(boolean_variable)
#booleans are either True or False (must be capitalized)

integer_variable = 50
#numbers without decimals, if you use comma it will register as a set of numbers

float_variable = 5.05
#numbers with decimals

my_variable="float",3,9.9,True
print(my_variable)
#all variables can be used alongside eachother so long as the function allows it

Arithmetic Operators

a *= 2
a /= 2
a //=2
a += 2
a -= 2
a **=2
a %= 2



a=3
print(type(a))
a=str(a)
print(type(a))
print(a)

b="3"
print(a+ int(b))

strings can be added too, just like ints and floats
int+float=float 

a = 10
b = True
c = a - b
print(c)

output of 9 becuase true registers as 1 and false as 0

a = 25
b =5.1
print(a / b)
print(a//b)
floor division^
#always rounds down

a =2
b ="Hi "
print (a * b)
#print(ab) doesnt work

a =4**2
print(a) 
#dont exponent a negative number
square_root =25**.5
print(square_root) 

PEMDAS

modulo = 5 % 2
print(modulo)

whole = 63
divider = 5
division = 63//5
remainder = 63 % 5
print(division)
print(remainder)
#negative whole returns negative division, positive remainder
#negative divider returns both negative 


Boolean Operators

a = True
b = 1
print(a == b) 

a = 5
b = 1
print(a != b)

a = 9
b = 17
print(a > b)

a = True
b = False
print(a > b)

a=True
b=True
c=False
d=False
print(a and b)
print(a and b and c)
print(a and b and a and b)
print(a or b)
print(a or c)
print(c or d)
print(a or c or d)

print(not True)

calculate bools in order of not, and, then or 

#Short Circuting- if Python knows something will be true before finishing, it wont finish 

>>> print("hi"bob")
  File "<stdin>", line 1
    print("hi"bob")
                 ^
SyntaxError: unterminated string literal (detected at line 1)
>>> print("hi\"bob")
hi"bob
>>>
The \ will cancel the 1st ", its an escape

>>> print("hi\bob")
hob
>>>HAHAHA

anyways 
use use end=' ' for any special characters

teacher_name = "xi chen"

Use Type Cast to change type of variable 

# Converts a string to an integer
var1 = int("123")
var2 = 100
print(var1 + var2) 

>>> first_name =bool(first_name)
>>> print(first_name)
True
>>>

Input function
>>> first = input("first name")
first nameRose
>>> print(first)
Rose
>>>
#defaults to string 

>>> numone =input()
6
>>> numtwo = input()
3
>>> numone + numtwo
'63'
>>> numone = int(numone)
>>> numtwo = int(numtwo)
>>> numone + numtwo
9
>>>#typecasting, ie 2

cs + string("1400")

Design:Yondu Udonta

Strings 

my_string = "Hello"
length = len(my_string)
print(length)
#returns 5

character = my_string[1]
print(character)
#string index/ referencing a character

my_string = "Hello!"
character = my_string[len(my_string)-1]
character = my_string[-1] 
print(character)
#you gotta do -1 because character length starts at 1 but character index starts at 0
#negative numbers count from the end, positive characters count from the front

Index Error- you're trying to access something that does not exist

Strings are immutable- you don't change just part of it you gotta assign the whole thing anew

my_string = "Hello world! This is a very, very long string. \
Even though this string is on three different lines, it should \
print as one line. Notice how the line breaks are different."
print(my_string)

long_string = """Notice how this weird looking
    string is being
        printed.
      WAPPPPP
    WAAAPPPPP
  WAAAAAAAAAA"""
  #also works with single quotes
print(long_string)

in Operator

my_string = "The brown dog jumps over the lazy fox."
print("dog" in my_string)
print(my_string in my_string)
#return True

slice Operator- includes the first number, excludes the second number 

my_string = "The brown dog jumps over the lazy fox."
my_slice = my_string[4:9] #brown 
#slice length will always equal the difference between the parameters
my_slice = my_string[1:1] #nothing
print(my_slice)
print(my_string[0:len(my_string)]) #everything
my_slice(0:3:2) 
#the 2 means step 2- use every other character within the parameters 

they count starting at 0

Escape characters

my_string = "Hello\nworld"
print(my_string)
#Hello, new line, World 

Enter in string \n 
Tab in string \t 

my_string = "And then she said, \"Hi there.\""
print(my_string)

\\	Prints a backslash                         	print("\\")
\’	Prints a single quote                    	print("\'")
\"	Prints a double quote                   	print("\"")
\t	Prints a tab (spacing)                   	print("Hello\tworld")
\uxxxx	Prints a hexidecimal unicode character	print("\u26BE")

Formatting Strings /Interpolating Strings 

arms = 2
fingers = 10
print("I have " + str(arms) + " arms and " + str(fingers) + " fingers.")


.format 
var1 = "Dream"
var2 = "Sing"
print("{} on, {} on, {} for the love and {} for the fear".format(var1,var1,var2,var2))

print("{2} on, {2} on, {0} for the love and {0} for the fear".format(var1,var1,var2,var2))

the index for the .format starts at 0

f string / f-string

var1 = 7
var2 = "away"
my_string = f"{var1} up and {var2}."
print(my_string)

this way automatically typecasts into string 

name = "Rose"
occupation = "farmer"
sentence = f"My name is {name}. "\
            f"I am a {occupation}."
print(sentence)

var1 = "Up"
var2 = "away"
print("%s, up and %s" % (var1, var2))

this way uses % to interpolate and s to type cast. it also works with i, f, but not b
its the old way dont use it 

select a chunk of code and do Ctrl # to comment it out- yet to test 

snake casing is all lowercase letters and using _ as a space

syntax is the rules for forming legal statements
semantics is the meaning associated with the statement 

we can use f"string{var}" to insert anything into a string- most importantly a function/return value
 

number = 6.329874
print(f"number is {number: .2f}")
(prints the number with 2 decimal places)
# number is 6.32

PEP 8 recommends that you should limit all lines to >= 79 characters
DocString






